# todo_list

./: .flake8  .gitignore  README.rst  pyproject.toml  setup.cfg
tests/: test_todo_list.py
todo_list/: __init__.py  api.py  db_utils.py  forms.py  helper.py  helpers.py  main.py  schema.sql  todo.db  todo_task.py  views.py
todo_list/static/: styles.css
todo_list/templates/: add_item.html  add_task.html  all_items.html  all_tasks.html  base.html  index.html  update_status.html
