[tool.poetry]
name = "todo_list"
version = "0.1.0"
description = "ToDo list web app for learning different technologies"
authors = ["Petr Ushakov <ko3luhbka@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
flask = "^1.1"
wemake-python-styleguide = "^0.12.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
