[tool.poetry]
name = "todo_list"
version = "0.1.0"
description = "ToDo list web app for learning different technologies"
authors = ["Petr Ushakov <ko3luhbka@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
flask = "^1.1"
wemake-python-styleguide = "^0.12.5"
flask-wtf = "^0.14.2"
flake8-import-order = "^0.18.1"
flake8_docstrings = "^1.5"
flake8-builtins = "^1.4"
flake8-quotes = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
